--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html lang="en">
 	<head>
+		<script>
+			let root = document.documentElement;
+			let colorScheme = localStorage.colorScheme ?? "light dark";
+			root.style.setProperty("color-scheme", colorScheme);
+		</script>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<script src="%sveltekit.assets%/global.js" type="module"></script>
