--- a/src/app.html
+++ b/src/app.html
@@ -9,6 +9,7 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<script src="%sveltekit.assets%/global.js" type="module"></script>
+		<script defer src="https://cloud.umami.is/script.js" data-website-id="1a68dff7-cdad-4b52-a5ee-036654ec6d43"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 		<title>Kateryna Morhun: Personal site and portfolio</title>
